--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^9.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.2.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5",
